tests/error/template_unhandled.gw
// [contains] template func call
template<{a, b}>
function void test(){};

(test())<{int, float}>();
